changes to project

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://unpkg.com/tailwindcss/typography@0.2.x/dist/typography.min.css");
 @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap');
 
 .cursive {
     font-family: "Amatic SC", cursive;
@@ -14,5 +14,31 @@
 }
 
 .home-name {
-    font-size:  150px;
+    font-size:  100px;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+#home.section {
+    background-color: rgba(0, 0, 0, 0);
+    background-position-x: center;
+    background-position-y: top;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-image: url("IMG_2714.JPG");
+    background-size: 100%;
+    background-origin: padding-box;
+    background-clip: border-box;
+    position: relative;
+}
+
+.full-height {
+    height: 90vh;
 }
